--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!-- Suelta tus manos y tu mente para solucionar este reto -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <!-- Etiqueta meta Viewport para que website sea responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Lab-car</title>
+    <!-- Framework CSS -Bootstrap- vinculado -->
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
+    <!-- Archivo CSS vinculado -->
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+
+
+    <!-- Archivo JS vinculado -->
+    <script type="text/javascript" src="js/app.js"></script>
+    <!-- Library -JQuery- vinculado -->
+    <script type="text/javascript" src="vendors/jquery/jquery-3.2.1.slim.min.js"></script>
+    <!-- Framework JS -Bootstrap- vinculado -->
+    <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
+  </body>
+</html>
