--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lab-car</title>
+    <!-- Fuentes de letras agregadas -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700,800,900" rel="stylesheet">
     <!-- Framework CSS -Bootstrap- vinculado -->
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <!-- Archivo CSS vinculado -->
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <img class="top-logo" src="assets/images/logoForma.png" alt="Labcar logo">
+          </a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Viaja<span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Conduce</a></li>
+            <li><a href="#">Inicia sesión</a></li>
+          </ul>
+      </div>
+    </nav>
 
 
     <!-- Archivo JS vinculado -->
